(fix) text appearance issue in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@
     }
 
     select, input {
-        color: rgb(var(--background-rgb));
+        color: rgb(var(--foreground-rgb));
     }
 
     .shadow-lg {
